content to Japan, Germany, Belize sections using bootstrap css.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/drew.css" rel="stylesheet" type="text/css">
     <title>Vacation Dreamlist</title>
   </head>
   <body>
@@ -14,25 +15,59 @@
       <div class="panel panel-default">
         <div class="panel-body">
           <h3 class="text-info">Japan</h3>
-          <p>Japan has long been one of my top picks. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. The main reasons for visiting are:</p>
-          <ul>
-            <li>History</li>
-            <li>Food</li>
-            <li>My friend Nic</li>
-            <li>Tokyo Disney</li>
+          <h4>Japan has long been one of my top picks. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. The main reasons for visiting are:</h4>
+          <ul class="text-info">
+            <li><h5>History</h5></li>
+            <li><h5>Food</h5></li>
+            <li><h5>My friend Nic</h5></li>
+            <li><h5>Tokyo Disney</h5></li>
           </ul>
+          <div class="well">
+            <div class="row" >
+              <div class="col-md-6">
+                <img src="img/pagoda.jpg" height="300px" width="75%" class="img-circle center-block">
+                <p class="text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+              <div class="col-md-6">
+                <img src="img/tokyo.jpeg" height="300px" width="75%" class="img-circle center-block">
+                <p class="text-center text-muted">Tokyo has long been a popular travel destination and I wish to follow suit!</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <img src="img/akira.jpg" height="300px" width="75%" class="img-circle center-block">
+                <p class="text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+              <div class="col-md-6">
+                <img src="img/osaka.gif" height="300px" width="75%" class="img-circle center-block">
+                <p class="text-center text-muted">Tokyo has long been a popular travel destination and I wish to follow suit!</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h3 class="text-info">Belize</h3>
-          <p>I was actually able to travel to Belize this year, technically taking this one off of my list! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. The main reasons for visiting are:</p>
-          <ul>
-            <li>Environmental Tourism</li>
-            <li>Food</li>
-            <li>Scuba Diving</li>
-            <li>Anthropological History</li>
+          <h4>I was actually able to travel to Belize this year, technically taking this one off of my list! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. The main reasons for visiting are:</h4>
+          <ul class="text-info">
+            <li><h5>Environmental Tourism</h5></li>
+            <li><h5>Food</h5></li>
+            <li><h5>Scuba Diving</h5></li>
+            <li><h5>Anthropological History</h5></li>
           </ul>
+          <div class="well">
+            <div class="row" >
+              <div class="col-md-6">
+                <img src="img/atmcave.jpg" height="300px" width="75%" class="img-circle center-block center-block">
+                <p class="text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+              <div class="col-md-6">
+                <img src="img/scuba.jpg" height="300px" width="75%" class="img-circle center-block">
+                <p class="text-center text-muted">Tokyo has long been a popular travel destination and I wish to follow suit!</p>
+              </div>
+            </div>
+          </div>
           <blockquote class="bg-warning">
             <p>"Belize was incredible! I had such a great time and learned so much"</p>
             <footer>Indi Keith</footer>
@@ -43,12 +78,24 @@
         <div class="panel-body">
           <h3 class="text-info">Germany</h3>
           <p>I was actually able to travel to Belize this year, technically taking this one off of my list! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. The main reasons for visiting are:</p>
-          <ul>
-            <li>Cutural History</li>
-            <li>Food</li>
-            <li>Hiking and Travelling</li>
-            <li>Personal Roots</li>
+          <ul class="text-info">
+            <li><h5>Cutural History</h5></li>
+            <li><h5>Food</h5></li>
+            <li><h5>Hiking and Travelling</h5></li>
+            <li><h5>Personal Roots</h5></li>
           </ul>
+          <div class="well">
+            <div class="row" >
+              <div class="col-md-6">
+                <img src="img/images.jpeg" height="300px" width="75%" class="img-circle center-block">
+                <p class="text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+              <div class="col-md-6">
+                <img src="img/black.jpeg" height="300px" width="75%" class="img-circle  center-block">
+                <p class="text-center text-muted">Tokyo has long been a popular travel destination and I wish to follow suit!</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
