--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron">
-        <h1>My dream Vacation Spots!</h1>
+      <div class="jumbotron text-center">
+        <h1>My Dream Vacation Spots!</h1>
         <p>I've been compiling this list for a while, let me share it with you!</p>
       </div>
       <h2>I'll be sharing and describing my top 3 travel destinations: Japan, Belize, and Germany!</h2>
@@ -26,7 +26,7 @@
             <div class="row" >
               <div class="col-md-6">
                 <img src="img/pagoda.jpg" height="300px" width="75%" class="img-circle center-block">
-                <p class="text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.lorem</p>
               </div>
               <div class="col-md-6">
                 <img src="img/tokyo.jpeg" height="300px" width="75%" class="img-circle center-block">
