fixed code formatting issues

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </div>
             </div>
           </div>
-          <blockquote class="bg-warning">
+          <blockquote class="bg-info">
             <p>"Belize was incredible! I had such a great time and learned so much"</p>
             <footer>Indi Keith</footer>
           </blockquote>
@@ -98,9 +98,6 @@
           </div>
         </div>
       </div>
-
-
-
     </div>
   </body>
 </html>
